tests/infinite_type/overflow_evaluation_with_box.stderr
error[E0275]: overflow evaluating the requirement `Send<i32, Recv<i32, Recv<Test9, End>>>: std::marker::Send`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:85:12
   |
85 |     Branch(Box<Send<i32, Recv<i32, Recv<Test9, End>>>>),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: required for `Unique<Send<i32, Recv<i32, Recv<Test9, End>>>>` to implement `std::marker::Send`
note: required because it appears within the type `Box<Send<i32, Recv<i32, Recv<Test9, End>>>>`
  --> $RUST/alloc/src/boxed.rs
   |
   | pub struct Box<
   |            ^^^
note: required because it appears within the type `Test9`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:83:6
   |
83 | enum Test9 {
   |      ^^^^^
note: required for `Recv<Test9, End>` to implement `Session`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:38:35
   |
38 | impl<T: marker::Send, S: Session> Session for Recv<T, S> {
   |         ------------              ^^^^^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here

error[E0275]: overflow evaluating the requirement `Send<i32, Recv<i32, Send<Test10, End>>>: std::marker::Send`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:89:12
   |
89 |     Branch(Box<Send<i32, Recv<i32, Send<Test10, End>>>>),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: required for `Unique<Send<i32, Recv<i32, Send<Test10, End>>>>` to implement `std::marker::Send`
note: required because it appears within the type `Box<Send<i32, Recv<i32, Send<Test10, End>>>>`
  --> $RUST/alloc/src/boxed.rs
   |
   | pub struct Box<
   |            ^^^
note: required because it appears within the type `Test10`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:87:6
   |
87 | enum Test10 {
   |      ^^^^^^
note: required for `Send<Test10, End>` to implement `Session`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:34:35
   |
34 | impl<T: marker::Send, S: Session> Session for Send<T, S> {
   |         ------------              ^^^^^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here

error[E0275]: overflow evaluating the requirement `Send<i32, Send<i32, Recv<Test11, End>>>: std::marker::Send`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:93:12
   |
93 |     Branch(Box<Send<i32, Send<i32, Recv<Test11, End>>>>),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: required for `Unique<Send<i32, Send<i32, Recv<Test11, End>>>>` to implement `std::marker::Send`
note: required because it appears within the type `Box<Send<i32, Send<i32, Recv<Test11, End>>>>`
  --> $RUST/alloc/src/boxed.rs
   |
   | pub struct Box<
   |            ^^^
note: required because it appears within the type `Test11`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:91:6
   |
91 | enum Test11 {
   |      ^^^^^^
note: required for `Recv<Test11, End>` to implement `Session`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:38:35
   |
38 | impl<T: marker::Send, S: Session> Session for Recv<T, S> {
   |         ------------              ^^^^^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here

error[E0275]: overflow evaluating the requirement `Send<i32, Send<i32, Send<Test12, End>>>: std::marker::Send`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:97:12
   |
97 |     Branch(Box<Send<i32, Send<i32, Send<Test12, End>>>>),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: required for `Unique<Send<i32, Send<i32, Send<Test12, End>>>>` to implement `std::marker::Send`
note: required because it appears within the type `Box<Send<i32, Send<i32, Send<Test12, End>>>>`
  --> $RUST/alloc/src/boxed.rs
   |
   | pub struct Box<
   |            ^^^
note: required because it appears within the type `Test12`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:95:6
   |
95 | enum Test12 {
   |      ^^^^^^
note: required for `Send<Test12, End>` to implement `Session`
  --> tests/infinite_type/overflow_evaluation_with_box.rs:34:35
   |
34 | impl<T: marker::Send, S: Session> Session for Send<T, S> {
   |         ------------              ^^^^^^^     ^^^^^^^^^^
   |         |
   |         unsatisfied trait bound introduced here
